--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+  intl:
 
 dev_dependencies:
   flutter_test:
@@ -50,6 +51,9 @@ flutter:
       fonts:
         - asset: assets/fonts/Raleway-SemiBold.ttf
         - asset: assets/fonts/Raleway-SemiBold.ttf
+
+  assets:
+    - assets/images/
       
 
   # To add assets to your application, add an assets section, like this:
